# romer

./: .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  roadmap.md
client/: Cargo.toml  cargo.toml
client/src/: app.rs  handlers.rs  main.rs
client/src/handlers/: fix.rs  keymanager.rs  mod.rs  sequencer.rs  state.rs
common/: Cargo.toml  cargo.toml
common/src/: error.rs  lib.rs
common/src/fix/: mock.rs
common/src/keystore/: keymanager.rs
common/src/storage/: journal.rs  mod.rs
common/src/types/: fix.rs  keymanager.rs  mod.rs  org.rs  token.rs
common/src/utils/: mod.rs
config/: application.toml  genesis.toml  grafana-dashboard.json  prometheus.yaml  regions.toml  runtime.toml  storage.toml  tokenomics.toml  validator.toml
docs/: about.html  index.html  listings.json  regions.html  search.json  sitemap.xml
docs/blog/: index.html  index.xml
docs/blog/drafts/2025-01-01-devnet/: index.html
docs/economics/: distribution.html  index.html  market.html  model.html  validators.html
docs/technical/: devnet.html  index.html  network.html  notes.html  pop.html
sequencer/: Cargo.toml  README.md
sequencer/src/: main.rs
sequencer/src/block/: batch.rs  builder.rs  mod.rs  timer.rs
sequencer/src/fix/: mock.rs  mod.rs  parser.rs  types.rs  validator.rs
sequencer/src/network/: codec.rs  connection.rs  listener.rs  manager.rs  mod.rs  types.rs
sequencer/src/session/: auth.rs  manager.rs  mod.rs  state.rs
src/: block.rs  gui.rs  main.rs  types.rs
src/application/: actor.rs  mod.rs  supervisor.rs
src/block/: mod.rs  producer.rs  state.rs
src/cmd/: cli.rs
src/config/: application.rs  genesis.rs  mod.rs  runtime.rs  shared.rs  storage.rs  tokenomics.rs  validator.rs
src/consensus/: automaton.rs  coordinator.rs  mod.rs  supervisor.rs  zk.rs
src/consensus/block/: entities.rs  state.rs
src/identity/: keymanager.rs  mod.rs
src/node/: mod.rs  network_validator.rs  node.rs  operating_regions.rs  validator.rs
src/node/cmd/: cli.rs
src/node/config/: runtime.rs
src/node/location/: analysis.rs  measurements.rs  mod.rs
src/node/location_validator/: analysis.rs  measurements.rs  mod.rs  types.rs
src/storage/: persistence.rs
src/utils/: utils.rs
src/validation/: hardware_validator.rs  mod.rs  proof_generator.rs  zk.rs
src/validation/location_validator/: analysis.rs  measurements.rs  mod.rs  types.rs
validator/: Cargo.toml  README.md  cargo.toml
validator/data/romer_log/0/log/: 0000000000000001
validator/src/: main.rs
validator/src/application/: actor.rs  ingress.rs  mod.rs
validator/src/node/cmd/: cli.rs
validator/src/node/keystore/: keymanager.rs
validator/src/utils/: utils.rs
validator/src/validation/: latency_validator.rs  mod.rs  proof_generator.rs
vm/: Cargo.toml
vm/src/: error.rs  lib.rs  vm.rs
vm/src/examples/basic_module/sources/: basic.move  run_vm.rs
vm/src/natives/: mod.rs  table.rs
vm/src/package/: deployer.rs  mod.rs
vm/src/runtime/: session.rs
vm/src/storage/: modules.rs
vm/src/verifier/: mod.rs
website/: _quarto.yml
website/blog/posts/2025-01-01-devnet/: index.qmd
website/technical/: index.qmd
