[package]
name = "romer"
version = "0.1.0"
edition = "2021"

[dependencies]
commonware-p2p = "=0.0.25"
commonware-cryptography = "=0.0.14"
commonware-consensus = "=0.0.3"
commonware-storage = "=0.0.6"
commonware-runtime = "=0.0.11"
commonware-utils = "=0.0.3"
hex = "0.4"
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
governor = "0.6"
bytes = "1.5"
warp = "0.3"
thiserror = "1.0"
rand = "0.8"
toml = "0.7"
futures = "0.3"
windows-acl = "0.3"
whoami = "1.4"
async-std = { version = "1.12.0", features = ["attributes"] }
local-ip-address = "0.5.3"
dirs = "4.0"