[package]
name = "romer"
version = "0.1.0"
edition = "2021"

[dependencies]
commonware-p2p = "=0.0.25"
commonware-cryptography = "=0.0.14"
commonware-consensus = "=0.0.3"
commonware-storage = "=0.0.6"
commonware-runtime = "=0.0.11"
commonware-utils = "=0.0.3"
hex = "0.4"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
governor = "0.6"
bytes = "1.5"
warp = "0.3"
rand = "0.8"
toml = "0.7"
thiserror = "1.0.63"
futures = "0.3"
windows-acl = "0.3"
whoami = "1.4"
dirs = "4.0"
geo = "0.26"
anyhow = "1.0.75"
surge-ping = "0.8.0"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.27.0"
crossterm = "0.28.1"
serde_json = "1.0.122"