[package]
name = "romer-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rømer Chain client implementation"

[dependencies]
romer-common = { path = "../common"}
commonware-cryptography.workspace = true
commonware-utils.workspace = true
termion = "4.0.3"