[package]
name = "romer-common"
version.workspace = true
edition.workspace = true

[lib]
name = "romer_common"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true
rand.workspace = true
dirs.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
fefix.workspace = true
