[package]
name = "romer-sequencer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "romer-sequencer"
path = "src/main.rs"

[dependencies]
romer-common = { path = "../common" }
dashmap = "5.5.3"

# Workspace dependencies
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
bytes.workspace = true
rand.workspace = true
fefix.workspace = true
uuid.workspace = true