# /validator/Cargo.toml
[package]
name = "romer-validator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "romer-validator"
path = "src/main.rs"

[dependencies]
commonware-p2p.workspace = true
commonware-cryptography.workspace = true
commonware-consensus.workspace = true
commonware-storage.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
geo.workspace = true
dirs.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
surge-ping.workspace = true
ratatui.workspace = true
futures.workspace = true
crossterm.workspace = true
governor.workspace = true
prometheus-client.workspace = true
